--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     name: A job to say hello
     steps:
     - name: checkout
-      uses: actions/checkpout@v3
+      uses: actions/checkout@v3
     - name: Hello world action step
       id: hello
       # uses: actions/hello-world-docker-action@v1
