--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       # uses: actions/hello-world-docker-action@v1
       uses: ./
       with:
-        who-to-greet: 'cheese'
+        who-to-greet: 'www.google.com'
     # Use the output from the `hello` step
     - name: Get the output time
       run: echo "The time was ${{ steps.hello.outputs.time }}"
